# adidas

./: .env.sample  Makefile  README.md  dev.Dockerfile  main.py  pyproject.toml
app/: app.py  settings.py
app/domain/: model.py
app/errors/: unexpected_status_error.py
app/handlers/: parser.py
app/infra/aiohttp/: aioretry.py  helpers.py
app/infra/csv_writer/: writer.py
app/logging/: logger.py
