[tool.poetry]
name = "adidas"
version = "1.0.0"
description = "Adidas"
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
{include = "*.py"},
{include = "app/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
pydantic = "^2.3.0"
aiohttp-retry = "^2.8.3"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
